examples/negative/type_errors/L1/10_ne_bool_int.ob
MODULE NeBoolInt;

VAR b: BOOLEAN;
    i: INTEGER;
    ok: BOOLEAN; (* Ensures errors occur on the correct line *)

BEGIN
  b := TRUE;
  i := 42;
  b := b # i; ok := TRUE;
END NeBoolInt.
